Added possibility to run from command line using java -jar and calculate bonus rewards. Added README.